Fixed slider on mobile

--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -18,6 +18,16 @@
   font-size: 24px;
 }
 
+.pineapple-slide .slider-image {
+  width: 80%;
+  margin-left: 10%;
+  margin-top: -90px;
+}
+
+.main-slider .slider-content .slider-content-text {
+  margin-bottom: 0px !important;
+}
+
 .heading-text {
   color: #2f2c2c !important;
 }
@@ -48,6 +58,14 @@
   width: 100%;
 }
 
+.contact-label {
+  font-size: 18px !important;
+}
+
+.top-slide {
+  height: 550px !important;
+}
+
 @media (max-width: 980px) {
   .slider-content-text {
     font-size: 18px;
@@ -57,6 +75,10 @@
 @media (max-width: 768px) {
   .header-spacer {
     height: 25px;
+  }
+
+  .top-slide {
+    height: 600px !important;
   }
 
   .slider-content {
@@ -82,6 +104,20 @@
   .case-item {
     height: 400px;
   }
+
+  .top-slide {
+    height: 500px !important;
+  }
+
+  .slider-image {
+    width: 50%;
+    margin-left: 25% !important;
+  }
+
+  .conversion-slide .slider-image {
+    width: 80%;
+    margin-left: 10% !important;
+  }
 }
 
 @media (max-width: 375px) {
@@ -89,14 +125,9 @@
     max-width: 40%;
   }
 
-  .swiper-slide {
-    height: 510px !important;
-  }
-
   .main-slider .slider-content .slider-content-text {
     margin-top: 40px;
   }
-
 
   .main-slider-btn-wrap {
     margin-top: 50px !important;
@@ -104,5 +135,13 @@
 
   .slider-image {
     display: none;
+  }
+
+  .swiper-container {
+    height: 480px;
+  }
+
+  .top-slide {
+    height: 400px !important;
   }
 }
